# xdg-desktop-portal-termfilechooser

./: .clang-format  .gitignore  Compatability.md  Compatibility.md  README.md  meson.build  xdg-desktop-portal-termfilechooser.5.scd
.github/actions/meson/: action.yml
.github/actions/pkginstall/: action.yml  install-apt.sh
.github/workflows/: release.yml  test-build.yml
contrib/: config  fzf-wrapper.sh  kitty-wrapper.sh  lf-wrapper.sh  nnn-wrapper.sh  ranger-wrapper.sh  superfile-wrapper.sh  vifm-wrapper.sh  yazi-wrapper.sh
include/: config.h  logger.h  uri.h  xdptf.h  xdpw.h
src/core/: config.c  logger.c  main.c  request.c
src/filechooser/: filechooser.c  uri.c
